--- a/index.html
+++ b/index.html
@@ -2,218 +2,63 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>IDLE ASCENSION</title>
-
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:Arial}
-body{
-    background:#000;
-    overflow:hidden;
-    color:white;
-}
-
-/* CANVAS */
-#gameCanvas{
-    position:absolute;
-    top:0;
-    left:0;
-    width:100vw;
-    height:100vh;
-    background:linear-gradient(#0a0a15,#000);
-}
-
-/* HUD */
-#hud{
-    position:absolute;
-    top:8px;
-    width:100%;
-    text-align:center;
-    font-size:13px;
-    z-index:10;
-    pointer-events:none;
-}
-
-/* BOTTOM BAR */
-#bottomBar{
-    position:absolute;
-    bottom:0;
-    width:100%;
-    height:70px;
-    background:rgba(0,0,0,0.85);
-    display:flex;
-    justify-content:space-around;
-    align-items:center;
-    z-index:20;
-}
-
-.btn{
-    padding:6px 10px;
-    background:#111;
-    border:1px solid #444;
-    color:white;
-    font-size:12px;
-    border-radius:6px;
-}
-
-.btn:active{background:#333}
-
-/* MENU */
-#mainMenu{
-    position:absolute;
-    width:100%;
-    height:100%;
-    background:#000;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    z-index:50;
-}
-
-.menuBox{
-    background:#111;
-    padding:20px;
-    border:1px solid #444;
-    width:90%;
-    max-width:400px;
-}
-
-.menuBox h2{
-    text-align:center;
-    margin-bottom:10px;
-}
-
-.menuStats{
-    font-size:13px;
-    margin-bottom:15px;
-    line-height:18px;
-}
-
-/* MODAL */
-.modal{
-    position:absolute;
-    width:100%;
-    height:100%;
-    background:rgba(0,0,0,0.95);
-    display:none;
-    flex-direction:column;
-    z-index:60;
-}
-
-.modalHeader{
-    padding:10px;
-    text-align:center;
-    border-bottom:1px solid #333;
-}
-
-.modalContent{
-    flex:1;
-    overflow-y:auto;
-    padding:10px;
-    font-size:13px;
-}
-
-/* SAVE PANEL */
-#savePanel textarea{
-    width:100%;
-    height:80px;
-    background:#111;
-    color:white;
-    border:1px solid #444;
-    font-size:10px;
-}
+    *{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif}
+    body{background:#0a0a15;color:#fff;overflow:hidden}
+    canvas{position:absolute;top:0;left:0;width:100%;height:100%}
+    #hud{position:absolute;top:10px;width:100%;text-align:center;font-size:16px;z-index:10;text-shadow:0 0 10px #000}
+    #bottomBar{position:absolute;bottom:0;width:100%;height:80px;background:rgba(0,0,0,0.9);display:flex;justify-content:space-around;align-items:center;z-index:20}
+    .btn{padding:12px 20px;background:#1f1f2e;border:1px solid #555;color:#fff;border-radius:10px;font-size:14px;cursor:pointer}
+    .btn:active{transform:scale(0.95)}
+    .modal{position:fixed;inset:0;background:rgba(0,0,0,0.97);display:none;flex-direction:column;z-index:100}
+    .modalHeader{padding:18px;text-align:center;border-bottom:1px solid #444;font-size:20px;display:flex;justify-content:space-between;align-items:center}
+    .modalContent{flex:1;overflow-y:auto;padding:15px}
+    .shop-item{margin:10px 0;padding:15px;background:#111;border:1px solid #444;border-radius:10px;display:flex;justify-content:space-between;align-items:center}
 </style>
 </head>
 <body>
 
 <canvas id="gameCanvas"></canvas>
 
-<!-- HUD -->
 <div id="hud">
-Gold: <span id="goldText">0</span> |
-Level: <span id="levelText">1</span> |
-Wave: <span id="waveText">1</span> |
-DPS: <span id="dpsText">0</span>
+    Gold: <span id="goldText">0</span> | 
+    Level: <span id="levelText">1</span> | 
+    Wave: <span id="waveText">1</span> | 
+    DPS: <span id="dpsText">0</span> | 
+    World: <span id="worldText">Earth</span>
 </div>
 
-<!-- BOTTOM BAR -->
 <div id="bottomBar">
-<button class="btn" onclick="openModal('goldShop')">Gold Shop</button>
-<button class="btn" onclick="openModal('prestigeShop')">Prestige</button>
-<button class="btn" onclick="openModal('items')">Items</button>
-<button class="btn" onclick="openModal('books')">Books</button>
-<button class="btn" onclick="openModal('menuStats')">Menu</button>
+    <button class="btn" onclick="openModal('goldShop')">Gold Shop</button>
+    <button class="btn" onclick="openModal('prestigeShop')">Prestige Shop</button>
+    <button class="btn" onclick="openModal('worldModal')">🌍 Worlds</button>
+    <button class="btn" onclick="tryPrestige()">Prestige Reset</button>
+    <button class="btn" onclick="openModal('menuModal')">Menu</button>
 </div>
 
-<!-- MAIN MENU -->
-<div id="mainMenu">
-<div class="menuBox">
-<h2>IDLE ASCENSION</h2>
-<div class="menuStats" id="menuStatsText">
-Yükleniyor...
-</div>
-<button class="btn" onclick="startGame()">PLAY</button>
-</div>
-</div>
-
-<!-- GOLD SHOP -->
 <div class="modal" id="goldShop">
-<div class="modalHeader">
-Gold Shop <button onclick="closeModal('goldShop')">X</button>
-</div>
-<div class="modalContent" id="goldShopContent"></div>
+    <div class="modalHeader">Gold Shop <button onclick="closeModal('goldShop')">✕</button></div>
+    <div class="modalContent" id="goldShopContent"></div>
 </div>
 
-<!-- PRESTIGE SHOP -->
 <div class="modal" id="prestigeShop">
-<div class="modalHeader">
-Prestige Shop <button onclick="closeModal('prestigeShop')">X</button>
-</div>
-<div class="modalContent" id="prestigeShopContent"></div>
+    <div class="modalHeader">Prestige Shop <button onclick="closeModal('prestigeShop')">✕</button></div>
+    <div class="modalContent" id="prestigeShopContent"></div>
 </div>
 
-<!-- ITEMS -->
-<div class="modal" id="items">
-<div class="modalHeader">
-Items <button onclick="closeModal('items')">X</button>
-</div>
-<div class="modalContent" id="itemsContent"></div>
+<div class="modal" id="worldModal">
+    <div class="modalHeader">Worlds <button onclick="closeModal('worldModal')">✕</button></div>
+    <div class="modalContent" id="worldContent"></div>
 </div>
 
-<!-- BOOKS -->
-<div class="modal" id="books">
-<div class="modalHeader">
-Books <button onclick="closeModal('books')">X</button>
-</div>
-<div class="modalContent" id="booksContent"></div>
-</div>
-
-<!-- MENU STATS + SAVE -->
-<div class="modal" id="menuStats">
-<div class="modalHeader">
-Profile & Save <button onclick="closeModal('menuStats')">X</button>
-</div>
-<div class="modalContent">
-
-<div id="profileStats"></div>
-
-<hr style="margin:10px 0;border:1px solid #222">
-
-<div id="savePanel">
-<button class="btn" onclick="manualSave()">Manual Save</button>
-<button class="btn" onclick="exportSave()">Export</button>
-<button class="btn" onclick="importSave()">Import</button>
-<button class="btn" onclick="resetSave()">Reset</button>
-
-<textarea id="saveData"></textarea>
-</div>
-
-</div>
+<div class="modal" id="menuModal">
+    <div class="modalHeader">Menu <button onclick="closeModal('menuModal')">✕</button></div>
+    <div class="modalContent" id="menuContent"></div>
 </div>
 
 <script src="game.js"></script>
 <script src="ui.js"></script>
-
 </body>
 </html>
