--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     *{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif}
     body{background:#0a0a15;color:#fff;overflow:hidden}
     canvas{position:absolute;top:0;left:0;width:100%;height:100%}
-    #hud{position:absolute;top:10px;width:100%;text-align:center;font-size:16px;z-index:10;text-shadow:0 0 10px #000}
-    #bottomBar{position:absolute;bottom:0;width:100%;height:80px;background:rgba(0,0,0,0.9);display:flex;justify-content:space-around;align-items:center;z-index:20}
-    .btn{padding:12px 20px;background:#1f1f2e;border:1px solid #555;color:#fff;border-radius:10px;font-size:14px;cursor:pointer}
-    .btn:active{transform:scale(0.95)}
+    #hud{position:absolute;top:10px;width:100%;text-align:center;font-size:17px;z-index:10;text-shadow:0 0 12px #000}
+    #bottomBar{position:absolute;bottom:0;width:100%;height:82px;background:rgba(0,0,0,0.92);display:flex;justify-content:space-around;align-items:center;z-index:20;border-top:3px solid #444}
+    .btn{padding:13px 22px;background:#1f1f2e;border:2px solid #555;color:#fff;border-radius:12px;font-size:14px;cursor:pointer}
+    .btn:active{transform:scale(0.94)}
     .modal{position:fixed;inset:0;background:rgba(0,0,0,0.97);display:none;flex-direction:column;z-index:100}
-    .modalHeader{padding:18px;text-align:center;border-bottom:1px solid #444;font-size:20px;display:flex;justify-content:space-between;align-items:center}
+    .modalHeader{padding:20px;text-align:center;border-bottom:1px solid #444;font-size:21px;display:flex;justify-content:space-between;align-items:center}
     .modalContent{flex:1;overflow-y:auto;padding:15px}
-    .shop-item{margin:10px 0;padding:15px;background:#111;border:1px solid #444;border-radius:10px;display:flex;justify-content:space-between;align-items:center}
+    .shop-item{margin:12px 0;padding:16px;background:#111;border:1px solid #555;border-radius:12px;display:flex;justify-content:space-between;align-items:center}
 </style>
 </head>
 <body>
@@ -27,36 +27,21 @@
     Level: <span id="levelText">1</span> | 
     Wave: <span id="waveText">1</span> | 
     DPS: <span id="dpsText">0</span> | 
-    World: <span id="worldText">Earth</span>
+    Combo: <span id="comboText">0x</span>
 </div>
 
 <div id="bottomBar">
-    <button class="btn" onclick="openModal('goldShop')">Gold Shop</button>
-    <button class="btn" onclick="openModal('prestigeShop')">Prestige Shop</button>
+    <button class="btn" onclick="openModal('goldShop')">🏪 Gold Shop</button>
+    <button class="btn" onclick="openModal('prestigeShop')">⭐ Prestige Shop</button>
+    <button class="btn" onclick="openModal('itemsModal')">🎒 Items</button>
     <button class="btn" onclick="openModal('worldModal')">🌍 Worlds</button>
     <button class="btn" onclick="tryPrestige()">Prestige Reset</button>
-    <button class="btn" onclick="openModal('menuModal')">Menu</button>
 </div>
 
-<div class="modal" id="goldShop">
-    <div class="modalHeader">Gold Shop <button onclick="closeModal('goldShop')">✕</button></div>
-    <div class="modalContent" id="goldShopContent"></div>
-</div>
-
-<div class="modal" id="prestigeShop">
-    <div class="modalHeader">Prestige Shop <button onclick="closeModal('prestigeShop')">✕</button></div>
-    <div class="modalContent" id="prestigeShopContent"></div>
-</div>
-
-<div class="modal" id="worldModal">
-    <div class="modalHeader">Worlds <button onclick="closeModal('worldModal')">✕</button></div>
-    <div class="modalContent" id="worldContent"></div>
-</div>
-
-<div class="modal" id="menuModal">
-    <div class="modalHeader">Menu <button onclick="closeModal('menuModal')">✕</button></div>
-    <div class="modalContent" id="menuContent"></div>
-</div>
+<div class="modal" id="goldShop"><div class="modalHeader">Gold Shop <button onclick="closeModal('goldShop')">✕</button></div><div id="goldShopContent" class="modalContent"></div></div>
+<div class="modal" id="prestigeShop"><div class="modalHeader">Prestige Shop <button onclick="closeModal('prestigeShop')">✕</button></div><div id="prestigeShopContent" class="modalContent"></div></div>
+<div class="modal" id="itemsModal"><div class="modalHeader">Envanter <button onclick="closeModal('itemsModal')">✕</button></div><div id="itemsContent" class="modalContent"></div></div>
+<div class="modal" id="worldModal"><div class="modalHeader">Worlds <button onclick="closeModal('worldModal')">✕</button></div><div id="worldContent" class="modalContent"></div></div>
 
 <script src="game.js"></script>
 <script src="ui.js"></script>
