--- a/index.html
+++ b/index.html
@@ -3,90 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CYBER ASCENSION: IDLE</title>
+    <title>CYBER ASCENSION: DARK WEB</title>
     <style>
-        :root { --neon-blue: #00f2ff; --neon-pink: #ff00ff; --bg-dark: #05050a; }
-        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, sans-serif; }
-        body { background: var(--bg-dark); color: #fff; overflow: hidden; user-select: none; }
+        :root { --neon-blue: #00f2ff; --neon-pink: #ff00ff; --neon-green: #39ff14; --bg: #020205; }
+        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Consolas', monospace; }
+        body { background: var(--bg); color: #fff; overflow: hidden; }
         
-        #game-container { position: relative; width: 100vw; height: 100vh; }
-        canvas { display: block; }
-
-        /* HUD & UI */
+        /* Floating HUD */
         #hud {
-            position: absolute; top: 20px; width: 100%; text-align: center;
-            z-index: 10; pointer-events: none;
+            position: absolute; top: 20px; width: 100%; text-align: center; z-index: 10;
+            pointer-events: none; text-transform: uppercase;
         }
-        .stats-top { font-size: 24px; font-weight: bold; text-shadow: 0 0 10px var(--neon-blue); margin-bottom: 10px; }
-        .progress-container { width: 300px; height: 10px; background: #111; margin: 5px auto; border: 1px solid #333; border-radius: 5px; overflow: hidden; }
-        #xpBar { width: 0%; height: 100%; background: var(--neon-blue); transition: width 0.2s; }
-        #bossTimerBar { width: 100%; height: 100%; background: var(--neon-pink); display: none; }
+        .main-val { font-size: 35px; color: var(--neon-blue); text-shadow: 0 0 20px var(--neon-blue); }
+        .sub-stats { font-size: 14px; color: var(--neon-pink); letter-spacing: 2px; }
 
-        /* Alt Panel */
+        /* Progress Bars */
+        .bar-wrap { width: 400px; height: 8px; background: #111; margin: 10px auto; border: 1px solid #333; position: relative; }
+        #xpBar { width: 0%; height: 100%; background: var(--neon-green); box-shadow: 0 0 15px var(--neon-green); transition: 0.3s; }
+        #bossBar { width: 100%; height: 100%; background: var(--neon-pink); box-shadow: 0 0 15px var(--neon-pink); display: none; }
+
+        /* Control Panel */
         #bottomBar {
-            position: absolute; bottom: 0; width: 100%; height: 90px;
-            background: rgba(10, 10, 20, 0.95); display: flex;
-            justify-content: center; align-items: center; gap: 15px;
-            border-top: 2px solid #222; z-index: 20;
+            position: absolute; bottom: 0; width: 100%; height: 110px;
+            background: rgba(0, 0, 0, 0.9); display: flex; justify-content: center; gap: 15px;
+            border-top: 1px solid var(--neon-blue); z-index: 20; align-items: center;
         }
         .btn {
-            padding: 12px 20px; background: #151525; border: 1px solid var(--neon-blue);
-            color: #fff; border-radius: 8px; cursor: pointer; font-weight: bold;
-            transition: 0.3s; text-transform: uppercase; font-size: 12px;
+            padding: 12px 25px; background: transparent; border: 1px solid var(--neon-blue);
+            color: var(--neon-blue); cursor: pointer; font-size: 12px; font-weight: bold;
+            transition: 0.2s; position: relative; overflow: hidden;
         }
-        .btn:hover { background: var(--neon-blue); color: #000; box-shadow: 0 0 15px var(--neon-blue); }
-        .btn-prestige { border-color: var(--neon-pink); color: var(--neon-pink); }
-        .btn-prestige:hover { background: var(--neon-pink); color: #000; box-shadow: 0 0 15px var(--neon-pink); }
+        .btn:hover { background: var(--neon-blue); color: #000; box-shadow: 0 0 20px var(--neon-blue); }
+        .btn-p { border-color: var(--neon-pink); color: var(--neon-pink); }
+        .btn-p:hover { background: var(--neon-pink); color: #000; box-shadow: 0 0 20px var(--neon-pink); }
 
-        /* Modallar */
+        /* Modal Redesign */
         .modal {
             position: fixed; inset: 0; background: rgba(0,0,0,0.95);
-            display: none; flex-direction: column; z-index: 100; padding: 20px;
+            display: none; flex-direction: column; z-index: 100; padding: 40px;
+            border: 2px solid var(--neon-blue); margin: 20px; border-radius: 20px;
         }
-        .modal-header { display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid #333; padding-bottom: 15px; margin-bottom: 15px; }
-        .modal-content { flex: 1; overflow-y: auto; }
+        .shop-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
         .shop-item {
-            background: #111; border: 1px solid #222; padding: 15px;
-            margin-bottom: 10px; border-radius: 10px; display: flex;
-            justify-content: space-between; align-items: center;
+            background: #0a0a15; border: 1px solid #222; padding: 20px;
+            display: flex; justify-content: space-between; align-items: center;
+            border-radius: 10px; transition: 0.3s;
         }
-        .close-btn { background: none; border: none; color: #fff; font-size: 30px; cursor: pointer; }
+        .shop-item:hover { border-color: var(--neon-blue); background: #0f0f25; }
     </style>
 </head>
 <body>
 
-<div id="game-container">
-    <div id="hud">
-        <div class="stats-top">DATA: <span id="goldText">0</span> TB</div>
-        <div style="font-size: 14px; color: var(--neon-blue);">LEVEL <span id="levelText">1</span> | WAVE <span id="waveText">1</span></div>
-        <div class="progress-container"><div id="xpBar"></div></div>
-        <div class="progress-container" id="bossTimerContainer" style="display:none;"><div id="bossTimerBar"></div></div>
-        <div style="font-size: 12px; margin-top: 5px; opacity: 0.8;">OPS/s: <span id="dpsText">0</span> | SPEED: <span id="speedText">100</span>%</div>
-    </div>
+<div id="hud">
+    <div class="main-val"><span id="goldText">0</span> TB</div>
+    <div class="sub-stats">NODE: <span id="waveText">1</span> | LEVEL: <span id="levelText">1</span></div>
+    <div class="bar-wrap"><div id="xpBar"></div></div>
+    <div class="bar-wrap" id="bossContainer" style="display:none;"><div id="bossBar"></div></div>
+    <div id="dpsDisplay" style="font-size: 12px; opacity: 0.7;">[ SYSTEM LOAD: <span id="dpsText">0</span> OPS/S ]</div>
+</div>
 
-    <canvas id="gameCanvas"></canvas>
+<canvas id="gameCanvas"></canvas>
 
-    <div id="bottomBar">
-        <button class="btn" onclick="openModal('goldShop')">⚙️ CORE UPGRADES</button>
-        <button class="btn btn-prestige" onclick="openModal('prestigeShop')">💎 ASCENSION</button>
-        <button class="btn" onclick="openModal('worldModal')">🌐 NETWORK</button>
-        <button class="btn" onclick="tryPrestige()">RESET & ASCEND</button>
-    </div>
+<div id="bottomBar">
+    <button class="btn" onclick="openModal('goldShop')">UPGRADES</button>
+    <button class="btn btn-p" onclick="openModal('prestigeShop')">DARK WEB (PRESTIGE)</button>
+    <button class="btn" onclick="openModal('statsModal')">SYS DATA</button>
+    <button class="btn" onclick="openModal('worldModal')">NET MAP</button>
+    <button class="btn btn-p" onclick="tryPrestige()">INITIALIZE REBOOT</button>
 </div>
 
 <div id="goldShop" class="modal">
-    <div class="modal-header"><h2>CORE UPGRADES</h2><button class="close-btn" onclick="closeModal('goldShop')">×</button></div>
-    <div id="goldShopContent" class="modal-content"></div>
+    <div style="display:flex; justify-content:space-between; margin-bottom: 20px;"><h2>CORE OVERCLOCK</h2><button class="btn" onclick="closeModal('goldShop')">CLOSE</button></div>
+    <div id="goldShopContent" class="shop-grid"></div>
 </div>
 
 <div id="prestigeShop" class="modal">
-    <div class="modal-header"><h2>ASCENSION SHOP</h2><button class="close-btn" onclick="closeModal('prestigeShop')">×</button></div>
-    <div id="prestigeShopContent" class="modal-content"></div>
+    <div style="display:flex; justify-content:space-between; margin-bottom: 20px;"><h2>ENCRYPTED DATA MARKET</h2><button class="btn" onclick="closeModal('prestigeShop')">CLOSE</button></div>
+    <div id="prestigeShopContent" class="shop-grid"></div>
+</div>
+
+<div id="statsModal" class="modal">
+    <div style="display:flex; justify-content:space-between; margin-bottom: 20px;"><h2>HARDWARE STATISTICS</h2><button class="btn" onclick="closeModal('statsModal')">CLOSE</button></div>
+    <div id="statsContent" class="modal-content"></div>
 </div>
 
 <div id="worldModal" class="modal">
-    <div class="modal-header"><h2>NETWORK NODES</h2><button class="close-btn" onclick="closeModal('worldModal')">×</button></div>
-    <div id="worldContent" class="modal-content"></div>
+    <div style="display:flex; justify-content:space-between; margin-bottom: 20px;"><h2>WORLD ACCESS</h2><button class="btn" onclick="closeModal('worldModal')">CLOSE</button></div>
+    <div id="worldContent" class="shop-grid"></div>
 </div>
 
 <script src="game.js"></script>
