--- a/index.html
+++ b/index.html
@@ -3,32 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CYBER ASCENSION: THE MULTIVERSE</title>
+    <title>CYBER ASCENSION: FIXED</title>
     <style>
         :root { --blue: #00f2ff; --pink: #ff00ff; --green: #39ff14; --gold: #ffd700; --bg: #020205; }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Consolas', monospace; }
         body { background: var(--bg); color: #fff; overflow: hidden; }
         
         #hud { position: absolute; top: 10px; width: 100%; text-align: center; z-index: 10; pointer-events: none; }
-        .currency-box { font-size: 32px; color: var(--gold); text-shadow: 0 0 15px var(--gold); margin-bottom: 5px; }
-        .world-info { font-size: 14px; color: var(--blue); letter-spacing: 1px; }
-
-        .progress-bar { width: 450px; height: 10px; background: #111; margin: 8px auto; border: 1px solid #333; position: relative; border-radius: 5px; }
-        #hpBar { width: 100%; height: 100%; background: linear-gradient(90deg, #ff0000, #ff00ff); transition: 0.1s; }
+        .currency-box { font-size: 32px; color: var(--gold); text-shadow: 0 0 15px var(--gold); }
+        .progress-bar { width: 400px; height: 10px; background: #111; margin: 10px auto; border: 1px solid #333; position: relative; border-radius: 5px; overflow: hidden;}
+        #hpBar { width: 100%; height: 100%; background: linear-gradient(90deg, #f00, #f0f); transition: width 0.1s; }
         
         #bottomBar {
-            position: absolute; bottom: 0; width: 100%; height: 120px;
-            background: rgba(0, 0, 0, 0.95); display: flex; justify-content: center; gap: 10px;
-            border-top: 2px solid var(--blue); z-index: 20; align-items: center; padding: 0 20px;
+            position: absolute; bottom: 0; width: 100%; height: 100px;
+            background: rgba(0, 0, 0, 0.9); display: flex; justify-content: center; gap: 10px;
+            border-top: 1px solid var(--blue); z-index: 20; align-items: center; padding: 0 10px;
         }
         .btn {
-            padding: 10px 15px; background: #000; border: 1px solid var(--blue);
-            color: var(--blue); cursor: pointer; font-size: 11px; font-weight: bold;
-            transition: 0.2s; border-radius: 4px; flex: 1; max-width: 150px;
+            padding: 10px; background: #000; border: 1px solid var(--blue);
+            color: var(--blue); cursor: pointer; font-size: 11px; font-weight: bold; flex: 1;
         }
-        .btn:hover { background: var(--blue); color: #000; box-shadow: 0 0 20px var(--blue); }
+        .btn:hover { background: var(--blue); color: #000; }
         .btn-p { border-color: var(--pink); color: var(--pink); }
-        .btn-p:hover { background: var(--pink); color: #000; box-shadow: 0 0 20px var(--pink); }
 
         .modal {
             position: fixed; inset: 0; background: rgba(0,0,0,0.98);
@@ -39,51 +35,39 @@
             background: #0a0a15; border: 1px solid #222; padding: 15px;
             display: flex; justify-content: space-between; align-items: center; border-radius: 8px;
         }
-        .close-btn { position: absolute; top: 20px; right: 20px; padding: 10px 20px; }
     </style>
 </head>
 <body>
 
 <div id="hud">
-    <div class="currency-box"><span id="goldText">0</span> DATA</div>
-    <div class="world-info">WORLD: <span id="worldNameText">NEON CITY</span> | NODE: <span id="waveText">1</span></div>
+    <div class="currency-box"><span id="goldText">0</span> TB</div>
+    <div style="color: var(--blue)">WORLD: <span id="worldNameText">NEON</span> | NODE: <span id="waveText">1</span></div>
     <div class="progress-bar"><div id="hpBar"></div></div>
-    <div style="font-size: 12px; opacity: 0.8; color: var(--green);">DPS: <span id="dpsText">0</span> | PRESTIGE CORES: <span id="coreText">0</span></div>
+    <div style="font-size: 12px; color: var(--green);">DPS: <span id="dpsText">0</span> | CORES: <span id="coreText">0</span></div>
 </div>
 
 <canvas id="gameCanvas"></canvas>
 
 <div id="bottomBar">
-    <button class="btn" onclick="openModal('goldShop')">BASE UPGRADES</button>
-    <button class="btn btn-p" onclick="openModal('prestigeShop')">ASCENSION SHOP</button>
-    <button class="btn" style="border-color: var(--green); color: var(--green);" onclick="openModal('worldModal')">MULTIVERSE MAP</button>
-    <button class="btn" onclick="openModal('statsModal')">STATISTICS</button>
-    <button class="btn btn-p" onclick="tryPrestige()">ASCEND NOW</button>
+    <button class="btn" onclick="openModal('goldShop')">UPGRADES</button>
+    <button class="btn btn-p" onclick="openModal('prestigeShop')">DARK MARKET</button>
+    <button class="btn" onclick="openModal('worldModal')">NETWORKS</button>
+    <button class="btn" onclick="openModal('statsModal')">STATS</button>
+    <button class="btn btn-p" onclick="tryPrestige()">REBOOT</button>
 </div>
 
 <div id="goldShop" class="modal">
-    <button class="btn close-btn" onclick="closeModal('goldShop')">BACK TO HUD</button>
-    <h2>HARDWARE UPGRADES</h2><br>
+    <div style="display:flex; justify-content:space-between; margin-bottom:20px;"><h2>HARDWARE MARKET</h2><button class="btn" onclick="closeModal('goldShop')" style="max-width:100px">CLOSE</button></div>
     <div id="goldShopContent" class="shop-grid"></div>
 </div>
 
 <div id="prestigeShop" class="modal">
-    <button class="btn close-btn" onclick="closeModal('prestigeShop')">BACK TO HUD</button>
-    <h2>ANCIENT ALGORITHMS</h2><br>
+    <div style="display:flex; justify-content:space-between; margin-bottom:20px;"><h2>ENCRYPTED DATA</h2><button class="btn" onclick="closeModal('prestigeShop')" style="max-width:100px">CLOSE</button></div>
     <div id="prestigeShopContent" class="shop-grid"></div>
 </div>
 
-<div id="worldModal" class="modal">
-    <button class="btn close-btn" onclick="closeModal('worldModal')">BACK TO HUD</button>
-    <h2>WORLD MAP (SYNERGY ACTIVE)</h2><br>
-    <div id="worldContent" class="shop-grid"></div>
-</div>
-
-<div id="statsModal" class="modal">
-    <button class="btn close-btn" onclick="closeModal('statsModal')">BACK TO HUD</button>
-    <h2>SYSTEM DATA</h2><br>
-    <div id="statsContent"></div>
-</div>
+<div id="worldModal" class="modal"><div id="worldContent" class="shop-grid"></div><button class="btn" onclick="closeModal('worldModal')">CLOSE</button></div>
+<div id="statsModal" class="modal"><div id="statsContent"></div><button class="btn" onclick="closeModal('statsModal')">CLOSE</button></div>
 
 <script src="game.js"></script>
 <script src="ui.js"></script>
