--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CYBER ASCENSION: MASTER LOOP</title>
+    <title>CYBER ASCENSION: FINAL CORE</title>
     <style>
         :root { --blue: #00f2ff; --pink: #ff00ff; --green: #39ff14; --gold: #ffd700; --bg: #020205; }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Consolas', monospace; }
         body { background: var(--bg); color: #fff; overflow: hidden; }
         
         #hud { position: absolute; top: 10px; width: 100%; text-align: center; z-index: 10; pointer-events: none; }
-        .currency-box { font-size: 30px; color: var(--gold); text-shadow: 0 0 10px var(--gold); }
-        .world-tag { color: var(--blue); font-size: 12px; letter-spacing: 2px; }
+        .currency-box { font-size: 32px; color: var(--gold); text-shadow: 0 0 10px var(--gold); }
+        .world-tag { color: var(--blue); font-size: 14px; letter-spacing: 2px; margin-top: 5px; }
 
-        .progress-bar { width: 350px; height: 12px; background: #111; margin: 10px auto; border: 1px solid #333; border-radius: 6px; overflow: hidden; }
-        #hpBar { width: 100%; height: 100%; background: linear-gradient(90deg, #ff0055, #ff00ff); transition: 0.1s; }
+        .progress-bar { width: 400px; height: 14px; background: #111; margin: 15px auto; border: 1px solid #333; border-radius: 7px; overflow: hidden; }
+        #hpBar { width: 100%; height: 100%; background: linear-gradient(90deg, #ff0055, #ff00ff); transition: width 0.1s linear; }
 
         #bottomBar {
-            position: absolute; bottom: 0; width: 100%; height: 100px;
-            background: rgba(0, 0, 0, 0.95); display: flex; justify-content: center; gap: 8px;
-            border-top: 1px solid var(--blue); z-index: 20; align-items: center; padding: 0 10px;
+            position: absolute; bottom: 0; width: 100%; height: 110px;
+            background: rgba(0, 0, 0, 0.95); display: flex; justify-content: center; gap: 10px;
+            border-top: 2px solid var(--blue); z-index: 20; align-items: center; padding: 0 15px;
         }
         .btn {
-            padding: 10px 5px; background: #080810; border: 1px solid var(--blue);
-            color: var(--blue); cursor: pointer; font-size: 10px; font-weight: bold; flex: 1; text-transform: uppercase;
+            padding: 12px 5px; background: #080810; border: 1px solid var(--blue);
+            color: var(--blue); cursor: pointer; font-size: 11px; font-weight: bold; flex: 1; text-transform: uppercase;
         }
         .btn:hover { background: var(--blue); color: #000; box-shadow: 0 0 15px var(--blue); }
         .btn-p { border-color: var(--pink); color: var(--pink); }
@@ -31,9 +31,9 @@
         .btn-w { border-color: var(--green); color: var(--green); }
         .btn-w:hover { background: var(--green); color: #000; box-shadow: 0 0 15px var(--green); }
 
-        .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.98); display: none; flex-direction: column; z-index: 100; padding: 30px; }
-        .shop-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 15px; overflow-y: auto; }
-        .shop-item { background: #0a0a1a; border: 1px solid #222; padding: 15px; display: flex; justify-content: space-between; align-items: center; border-radius: 8px; }
+        .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.98); display: none; flex-direction: column; z-index: 100; padding: 40px; }
+        .shop-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; overflow-y: auto; }
+        .shop-item { background: #0a0a1a; border: 1px solid #222; padding: 20px; display: flex; justify-content: space-between; align-items: center; border-radius: 10px; }
     </style>
 </head>
 <body>
@@ -42,37 +42,42 @@
     <div class="currency-box"><span id="goldText">0</span> TB</div>
     <div class="world-tag"><span id="worldNameText">NEON SECTOR</span> | NODE: <span id="waveText">1</span></div>
     <div class="progress-bar"><div id="hpBar"></div></div>
-    <div style="font-size: 12px; color: var(--green);">OPS: <span id="dpsText">0</span> | CORES: <span id="coreText">0</span></div>
+    <div style="font-size: 13px; color: var(--green);">OPS: <span id="dpsText">0</span> | CORES: <span id="coreText">0</span></div>
 </div>
 
 <canvas id="gameCanvas"></canvas>
 
 <div id="bottomBar">
-    <button class="btn" onclick="openModal('goldShop')">Hardware</button>
-    <button class="btn btn-p" onclick="openModal('prestigeShop')">Reboot</button>
-    <button class="btn btn-w" onclick="openModal('worldModal')">Networks</button>
-    <button class="btn" onclick="openModal('statsModal')">Logs</button>
+    <button class="btn" onclick="openModal('goldShop')">UPGRADES</button>
+    <button class="btn btn-p" onclick="openModal('prestigeShop')">REBOOT (ASCEND)</button>
+    <button class="btn btn-w" onclick="openModal('worldModal')">NETWORKS</button>
+    <button class="btn" onclick="openModal('statsModal')">SYSTEM LOGS</button>
 </div>
 
 <div id="goldShop" class="modal">
-    <div style="display:flex; justify-content:space-between; margin-bottom:20px;"><h2>UPGRADES</h2><button class="btn" style="max-width:80px" onclick="closeModal('goldShop')">X</button></div>
+    <div style="display:flex; justify-content:space-between; margin-bottom:30px;"><h2>HARDWARE MARKET</h2><button class="btn" style="max-width:100px" onclick="closeModal('goldShop')">CLOSE</button></div>
     <div id="goldShopContent" class="shop-grid"></div>
 </div>
 
 <div id="prestigeShop" class="modal">
-    <div style="display:flex; justify-content:space-between; margin-bottom:20px;"><h2>CORE ASCENSION</h2><button class="btn" style="max-width:80px" onclick="closeModal('prestigeShop')">X</button></div>
+    <div style="display:flex; justify-content:space-between; margin-bottom:30px;"><h2>ENCRYPTED CORES</h2><button class="btn" style="max-width:100px" onclick="closeModal('prestigeShop')">CLOSE</button></div>
     <div id="prestigeShopContent" class="shop-grid"></div>
-    <button class="btn btn-p" style="margin-top:20px; padding:20px;" onclick="tryPrestige()">INITIALIZE GLOBAL REBOOT</button>
+    <button class="btn btn-p" style="margin-top:30px; padding:25px; font-size:18px;" onclick="tryPrestige()">INITIALIZE SYSTEM REBOOT</button>
 </div>
 
 <div id="worldModal" class="modal">
-    <div style="display:flex; justify-content:space-between; margin-bottom:20px;"><h2>NETWORK NODES</h2><button class="btn" style="max-width:80px" onclick="closeModal('worldModal')">X</button></div>
+    <div style="display:flex; justify-content:space-between; margin-bottom:30px;"><h2>WORLD NETWORKS</h2><button class="btn" style="max-width:100px" onclick="closeModal('worldModal')">CLOSE</button></div>
     <div id="worldContent" class="shop-grid"></div>
 </div>
 
 <div id="statsModal" class="modal">
-    <div id="statsContent" style="line-height:2"></div>
-    <button class="btn" onclick="closeModal('statsModal')">CLOSE</button>
+    <h2>SYSTEM STATISTICS</h2>
+    <div id="statsContent" style="line-height:2.5; font-size:18px; margin: 30px 0;"></div>
+    <div style="margin-top: auto; display:flex; gap:10px;">
+        <button class="btn" onclick="saveGame()" style="border-color: var(--green); color: var(--green);">MANUAL SAVE</button>
+        <button class="btn" onclick="resetGame()" style="border-color: #f00; color: #f00;">HARD RESET</button>
+    </div>
+    <button class="btn" onclick="closeModal('statsModal')" style="margin-top:20px">BACK TO TERMINAL</button>
 </div>
 
 <script src="game.js"></script>
